# server/src/queries/index.ts
@@ -3,3 +3,4 @@ export * from './lists';
 export * from './tasks';
 export * from './cards';
 export * from './labels';
+export * from './settings';
